[package]
name = "tmux-mcp-rs"
version = "0.2.0"
edition = "2021"
description = "Tmux MCP server in Rust"
readme = "README.md"
homepage = "https://github.com/bnomei/tmux-mcp"
documentation = "https://docs.rs/tmux-mcp-rs"
license = "MIT"
repository = "https://github.com/bnomei/tmux-mcp"
keywords = ["tmux", "mcp", "cli", "automation", "agent"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[lib]
name = "tmux_mcp_rs"
path = "src/lib.rs"

[[bin]]
name = "tmux-mcp-rs"
path = "src/main.rs"

[features]
default = ["rayon", "rapidfuzz"]
rayon = ["dep:rayon"]
rapidfuzz = ["dep:rapidfuzz"]
fuzzy = ["rapidfuzz"]

[dependencies]
rmcp = { version = "1.2", default-features = false, features = ["server", "transport-io", "macros", "base64"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
toml = "0.9"
regex = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "registry", "std"] }
shell-words = "1"
tempfile = "3"
rayon = { version = "1", optional = true }
rapidfuzz = { version = "0.5", optional = true }

[dev-dependencies]
rstest = "0.26"
